cmake_minimum_required(VERSION 3.7)
project(dreerally)
find_package(SDL REQUIRED)
include_directories(${SDL_INCLUDE_DIRS})
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w -fpermissive -fno-stack-protector -m32 -Wno-everything")
add_executable(dreerally
asset/bpaUtil.c
asset/haf.c
cars.c
circuit.c
config.c
dr.c
drivers.c
graphics.c
i18n/i18n.c
imageUtil.c
mod/mod.c
multiplayer/multiplayer.c
portability/portability.c
race/3dSystem.c
race/endFlag.c
race/leftBar.c
race/lightSystem.c
race/pedestrian.c
race/powerup.c
raceParticipant.c
savegame.c
sfx/minifmod/soundSystem.c
sfx/sound.c
ui/blackMarketScreen.c
ui/creditsScreen.c
ui/endGameScreen.c
ui/hallOfFame.c
ui/licenseScreen.c
ui/loadSaveGameScreen.c
ui/mainScreen.c
ui/menu.c
ui/prevRaceScreen.c
ui/raceResultsScreen.c
ui/selectRaceScreen.c
ui/shopScreen.c
ui/startGameScreen.c
ui/util/anim.c
ui/util/bottomText.c
ui/util/carRightSide.c
ui/util/input.c
ui/util/menus.c
ui/util/popup.c
ui/util/raceResults.c
util.c
util/hash.c

# headers
asset/bpaUtil.h
asset/haf.h
cars.h
circuit.h
config.h
defs.h
doc.h
dr.h
drivers.h
graphics.h
i18n/i18n.h
imageUtil.h
mod/mod.h
portability/portability.h
race/3dSystem.h
race/endFlag.h
race/leftBar.h
race/lightSystem.h
race/pedestrian.h
race/powerup.h
race/terrain.h
raceParticipant.h
savegame.h
sfx/minifmod/fmod.h
sfx/minifmod/soundSystem.h
sfx/minifmod/system_memory.h
sfx/minifmod/xmeffects.h
sfx/sound.h
sfx/soundEffects.h
system_file.h
ui/blackMarketScreen.h
ui/creditsScreen.h
ui/endGameScreen.h
ui/hallOfFame.h
ui/licenseScreen.h
ui/loadSaveGameScreen.h
ui/mainScreen.h
ui/menu.h
ui/prevRaceScreen.h
ui/raceResultsScreen.h
ui/selectRaceScreen.h
ui/shopScreen.h
ui/startGameScreen.h
ui/util/anim.h
ui/util/bottomText.h
ui/util/carRightSide.h
ui/util/input.h
ui/util/menus.h
ui/util/popup.h
ui/util/raceResults.h
util.h
util/hash.h
variables.h
)
target_link_libraries(dreerally -lGL -lm -lSDL)
target_compile_definitions(dreerally PRIVATE PORTABILITY _NO_MINIFMOD DR_NO_SOUND)
